# tata

./: .env  Cargo.toml  README.md  Rocket.toml  test_data.sql
migrations/20191211181903_create_tables/: down.sql  up.sql
migrations/20200414230712/: down.sql  up.sql
migrations/20210414184231_v2_init_tables/: up.sql
mini-captcha/: Cargo.toml
mini-captcha/src/: lib.rs
src/: consts.rs  entity.rs  main.rs  models.rs  qiniu.rs  qinniu.rs  schema.rs  schemas.rs  schemas.rs.bak  sqltypes.rs  util.rs
src/backup/: mod.rs
src/catchers/: mod.rs
src/controllers/: admin.rs  admin_b.rs  blog.rs  book.rs  captcha.rs  friendlink.rs  mod.rs  page.rs  post.rs
src/controllers/admin/: book.rs  category.rs  comment.rs  dict.rs  friendlink.rs  image.rs  mod.rs  page.rs  post.rs  tag.rs
src/dto/: admin.rs  blog.rs  book.rs  comment.rs  dict.rs  friendlink.rs  mod.rs  page.rs  pagination.rs
src/dto/post/: category.rs  mod.rs  post.rs  postdetail.rs  tag.rs
src/helpers/: mod.rs
src/service/: admin.rs  blog.rs  book.rs  category.rs  comment.rs  dict.rs  friendlinks.rs  mod.rs  page.rs  pagination.rs  post.rs  tag.rs
src/tasks/: admin.rs  blog.rs  mod.rs
static/error/: 404.hbs
static/wasm-game/: 0.bootstrap.js  bootstrap.js  index.html
templates/: about.hbs  archive.hbs  article.hbs  base.hbs  bookcatalog.hbs  books.hbs  index.hbs  page.hbs  post.hbs  tags.hbs
templates/admin/: add-article.hbs  dashboard.hbs  index.hbs  layout.hbs  login.hbs  login.html  manage-articles.hbs  manage-categorys.hbs  put-article.hbs
templates/admin/book/: addbook.hbs  books.hbs  editbook.hbs  editbookcatalog.hbs  editbookpages.hbs
templates/admin/category/: addcategory.hbs  categorys.hbs  editcategory.hbs
templates/admin/comment/: comments.hbs  editcomment.hbs
templates/admin/dict/: dicts.hbs
templates/admin/page/: editpage.hbs
templates/error/: 404.hbs
templates/shared/: mathjax.hbs
(+9 files in other folders)
