[package]
name = "tata"
version = "0.1.0"
authors = ["yang.yh <yang.yh@torayoung.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
pulldown-cmark = "0.6"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = ["handlebars_templates", "diesel_sqlite_pool", "serve", "json"]