[workspace]

[package]
name = "tata"
version = "0.1.0"
authors = ["yang.yh <yang.yh@torayoung.com>"]
edition = "2018"

[dependencies]
mini_captcha={ path = "./mini-captcha"}
rocket = { version = "0.4.2", features = ["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
pulldown-cmark = "0.6"
ammonia = "3.1.0"
md5 = "0.7.0"
multipart = "0.16.1"
qiniu-ng ={ version = "0.0.2", features=["use-libcurl"] }

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = ["handlebars_templates", "diesel_sqlite_pool", "serve", "json"]